# pact

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TERMS.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
deploy/aws/: gateway-rate-limit.yaml  registry-compute.sam.yaml  registry.sam.yaml
deploy/lambdas/: .env.example  Dockerfile
docs/: __init__.py  api.rst  carriers.rst  cli.rst  conf.py  identity.rst  index.rst  legal.rst  manifest.rst  quickstart.rst  security.rst  server.rst  tpm.rst
docs/_static/: custom.css
docs/examples/: manual_testing.txt
services/lambdas/registry/: Dockerfile
src/pact/: __init__.py  browser.py  canonical.py  cli.py  crypto.py  fingerprints.py  identity.py  inspection.py  manifest.py  media.py  metadata.py  oprf.py  policy.py  privacy.py
src/pact/carriers/: __init__.py  c2pa.py  c2pa_text.py  structured.py  text.py
src/pact/detection/: __init__.py  evidence.py  probes.py  risk.py  statistics.py
src/pact/registry/: __init__.py  app.py  store.py
src/pact/server/: __init__.py  aws.py  config.py  lambda_app.py  logging.py  runtime.py
src/pact/watermarks/: __init__.py  base.py  canary.py  image.py  invisible.py  lexical.py  semantic.py  statistical.py  syntactic.py  textual.py
src/pact/web/: __init__.py  app.py  browser_bundle.py
src/pact/web/static/: pyodide-worker.js  workspace.css  workspace.js
src/pact/web/templates/: claim.html  home.html  profile.html  verify_claim.html  workspace.html
tests/: test_c2pa_carriers.py  test_c2pa_text_carriers.py  test_canonical.py  test_cli.py  test_crypto.py  test_detection.py  test_identity.py  test_image_watermarks.py  test_manifest.py  test_package.py  test_policy.py  test_privacy.py  test_registry.py  test_server_runtime.py  test_structured_carriers.py  test_text_carriers.py  test_text_watermarks.py  test_web_app.py
