[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[project]
name = "pact"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Rex Stockham", email = "rexstockham13@gmail.com" },
]
maintainers = [
    { name = "Rex Stockham", email = "rexstockham13@gmail.com" },
]
keywords = ["pact", "python", "typed"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "c2pa-python>=0.36.0",
    "cryptography>=49.0.0",
    "defusedxml>=0.7.1",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "keyring>=25.7.0",
    "pypdf>=6.1.3",
    "python-multipart>=0.0.32",
    "rfc8785>=0.1.4",
    "uvicorn>=0.49.0",
]

[project.scripts]
pact = "pact.cli:main"

[project.optional-dependencies]
server = [
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
c2pa = [
    "c2pa-python>=0.36.0",
    "c2pa-text>=3.0.0",
    "pypdf>=6.1.3",
]
image-watermark = [
    "pillow>=12.2.0",
    "trustmark>=0.9.1",
]
text-watermark = []
attestation = []
aws = [
    "mangum>=0.19.0",
    "psycopg[binary]>=3.3.2",
]
all = [
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "c2pa-python>=0.36.0",
    "c2pa-text>=3.0.0",
    "pillow>=12.2.0",
    "pypdf>=6.1.3",
    "mangum>=0.19.0",
    "psycopg[binary]>=3.3.2",
    "trustmark>=0.9.1",
]

[project.urls]
Homepage = "https://github.com/ncrypt-ai/pact"
Documentation = "https://github.com/ncrypt-ai/pact/tree/main/docs"
Repository = "https://github.com/ncrypt-ai/pact.git"
Issues = "https://github.com/ncrypt-ai/pact/issues"
Changelog = "https://github.com/ncrypt-ai/pact/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "coverage>=7.14.2",
    "furo>=2025.12.19",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "sphinx>=9.0.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-remove-toctrees>=1.0.0.post1",
    "ty>=0.0.51",
]
server = [
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
c2pa = [
    "c2pa-python>=0.36.0",
    "c2pa-text>=3.0.0",
    "pypdf>=6.1.3",
]
image-watermark = [
    "pillow>=12.2.0",
    "trustmark>=0.9.1",
]
text-watermark = []
attestation = []
aws = [
    "mangum>=0.19.0",
    "psycopg[binary]>=3.3.2",
]
all = [
    "fastapi>=0.138.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
    "c2pa-python>=0.36.0",
    "c2pa-text>=3.0.0",
    "pillow>=12.2.0",
    "pypdf>=6.1.3",
    "mangum>=0.19.0",
    "psycopg[binary]>=3.3.2",
    "trustmark>=0.9.1",
]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pact"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.uv]
required-version = ">=0.11.0"

[tool.uv.build-backend]
source-include = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "docs/**",
    "tests/**",
]
source-exclude = ["docs/_build"]
